--- a/package.json
+++ b/package.json
@@ -5,12 +5,27 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "start": "webpack serve --open --mode=development"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "webpack": "^5.53.0",
-    "webpack-cli": "^4.8.0"
+    "@babel/core": "^7.15.5",
+    "@babel/preset-env": "^7.15.6",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^6.3.0",
+    "handlebars-webpack-plugin": "^2.2.1",
+    "html-webpack-plugin": "^5.3.2",
+    "node-sass": "^6.0.1",
+    "sass": "^1.42.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.3.0",
+    "webpack": "^5.54.0",
+    "webpack-cli": "^4.8.0",
+    "webpack-dev-server": "^4.3.0"
+  },
+  "dependencies": {
+    "handlebars-loader": "^1.7.1"
   }
 }
