--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "@babel/preset-env": "^7.15.6",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.3.0",
-    "handlebars-webpack-plugin": "^2.2.1",
+    "fs": "0.0.1-security",
+    "handlebars": "^4.7.7",
+    "handlebars-loader": "^1.7.1",
     "html-webpack-plugin": "^5.3.2",
     "node-sass": "^6.0.1",
     "sass": "^1.42.1",
@@ -25,7 +27,5 @@
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "^4.3.0"
   },
-  "dependencies": {
-    "handlebars-loader": "^1.7.1"
-  }
+  "dependencies": {}
 }
